WIP - Issue with databiding

--- a/data/src/main/AndroidManifest.xml
+++ b/data/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="flat14.uk.co.data" />
+    package="uk.co.flat14.data" />
