--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,10 @@ android {
         }
     }
 
+    dataBinding {
+        enabled = true
+    }
+
 }
 
 dependencies {
@@ -32,6 +36,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
+
+    //Data Binding
+    annotationProcessor "com.android.databinding:compiler:3.1.3"
 
     //RxJava
     implementation "io.reactivex.rxjava2:rxjava:2.2.2"
