--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,31 @@
 version: 2
 jobs:
   build:
+    working_directory: ~/code
     docker:
-      - image: debian:stretch
+      - image: circleci/android:api-26-alpha
+    environment:
+      JVM_OPTS: -Xmx4g
     steps:
       - checkout
+      - restore_cache:
+        key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
-          name: Greeting
-          command: echo Hello, world.
+        name: Download Dependencies
+        command: ./gradlew androidDependencies
+      - save_cache:
+        paths:
+          - ~/.gradle
+        key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
-          name: Print the Current Time
-          command: date
+        name: Run Tests
+        command: ./gradlew lint test
+      - store_artifacts:
+        path: app/build/reports
+        destination: reports
+      - store_test_results:
+        path: app/build/test-results
+
     branches:
       only;
         - /feature-.*/
