--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,6 @@ jobs:
         destination: reports
       - store_test_results:
         path: app/build/test-results
-
     branches:
-      only;
+      only:
         - /feature-.*/
