--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -9,4 +9,5 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:2.2.2"
     testImplementation 'junit:junit:4.12'
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0-RC2"
+    implementation 'junit:junit:4.12'
 }
